cms/static/sass/_base.scss
// studio - base styling
// ====================

// basic setup
html {
  font-size: 62.5%;
  overflow-y: scroll;
}

body {
  @extend %t-copy-base;
  min-width: $fg-min-width;
  background: $gray-l5;
  color: $gray-d2;
}

body, input, button {
  font-family: 'Open Sans', sans-serif;
}

a {
  @include transition(color $tmg-f2 ease-in-out 0s);
  text-decoration: none;
  color: $blue;

  &:hover {
    color: $orange-d1;
  }
}

h1 {
  @extend %t-title4;
  font-weight: 300;
}

.waiting {
  opacity: 0.1;
}

.page-actions {
  margin-bottom: 30px;
}

.wrapper {
  @include clearfix();
  @include box-sizing(border-box);
  width: 100%;
}

// ====================

// typography - basic
.page-header {
  @extend %t-title3;
  display: block;
  font-weight: 600;
  color: $gray-d3;

  .navigation, .subtitle {
    @extend %t-title7;
    position: relative;
    top: ($baseline/4);
    display: block;
    color: $gray-l2;
    font-weight: 400;
  }
}

.section-header {
  @extend %t-title4;
  font-weight: 600;

  .subtitle {
    @extend %t-title7;
  }
}

.area-header {
  @extend %t-title6;
  font-weight: 600;

  .subtitle {
    @extend %t-title8;
  }
}

.area-subheader {
  @extend %t-title7;
  font-weight: 600;

  .subtitle {
    @extend %t-title9;
  }
}

// ====================

// typography - primary content
.content-primary {

  .section-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }

  .content-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }

  .area-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }

  .area-subheader {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }
}

// typography - primary content
.content-secondary {

  .section-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }

  .content-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }

  .content-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }
}

// ====================

// typography - loose headings (BT: needs to be removed once html is clean)
.title-1, .title-2, .title-3, .title-4, .title-5, .title-6 {
  font-weight: 600;
}

// typography - primary content
.content-secondary {

  .section-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }

  .content-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }

  .content-header {
    color: $gray-d3;

    .subtitle {
      color: $gray-l2;
    }
  }
}

// ====================

// typography - loose headings (BT: needs to be removed once html is clean)
.title-1 {
  @extend %t-title3;
  margin-bottom: ($baseline*1.5);
}

.title-2 {
  @extend %t-title4;
  margin-bottom: $baseline;
}

.title-3 {
  @extend %t-title5;
  margin-bottom: ($baseline/2);
}

.title-4 {
  @extend %t-title7;
  margin-bottom: $baseline;
  font-weight: 500
}

.title-5 {
  @extend %t-title7;
  color: $gray-l1;
  margin-bottom: $baseline;
  font-weight: 500
}

.title-6 {
  @extend %t-title7;
  color: $gray-l2;
  margin-bottom: $baseline;
  font-weight: 500
}

p, ul, ol, dl {
  margin-bottom: ($baseline/2);

  &:last-child {
    margin-bottom: 0;
  }
}

// ====================

// layout - basic
.wrapper-view {

}

// ====================

// layout - basic page header
.wrapper-mast {
  margin: ($baseline*1.5) 0 0 0;
  padding: 0 $baseline;
  position: relative;

  .mast, .metadata {
    @include clearfix();
    position: relative;
    max-width: $fg-max-width;
    min-width: $fg-min-width;
    width: flex-grid(12);
    margin: 0 auto $baseline auto;
    color: $gray-d2;
  }

  .mast {
    border-bottom: 1px solid $gray-l4;
    padding-bottom: ($baseline/2);

    // layout with actions
    .page-header {
      width: flex-grid(12);
    }

    // layout with actions
    &.has-actions {
      @include clearfix();

      .page-header {
        float: left;
        width: flex-grid(6,12);
        margin-right: flex-gutter();
      }

      .nav-actions {
        position: relative;
        bottom: -($baseline*0.75);
        float: right;
        width: flex-grid(6,12);
        text-align: right;

        .nav-item {
          display: inline-block;
          vertical-align: top;
          margin-right: ($baseline/2);

          &:last-child {
            margin-right: 0;
          }
        }

        // buttons
        .button {
          padding: ($baseline/4) ($baseline/2) ($baseline/3) ($baseline/2);
        }

        .new-button {

        }

        .view-button {

        }
      }
    }

    // layout with actions
    &.has-subtitle {

      .nav-actions {
        bottom: -($baseline*1.5);
      }
    }

    // layout with navigation
    &.has-navigation {

      .nav-actions {
        bottom: -($baseline*1.5);
      }

      .navigation-link {
        @extend %cont-truncated;
        display: inline-block;
        max-width: 250px;

        &.navigation-current {
          @extend %ui-disabled;
          color: $gray;
          max-width: 250px;

          &:before {
            color: $gray;
          }
        }
      }

      .navigation-link:before {
        content: " / ";
        margin: ($baseline/4);
        color: $gray;

        &:hover {
          color: $gray;
        }
      }

      .navigation .navigation-link:first-child:before {
        content: "";
        margin: 0;
      }
    }
  }

  // page metadata/action bar
  .metadata {

  }
}

// layout - basic page content
.wrapper-content {
  margin: 0;
  padding: 0 $baseline;
  position: relative;
}
/* ... */

